2012-10-28  Kent Tamura  <tkent@chromium.org>

        Rename Localizer to Locale
        https://bugs.webkit.org/show_bug.cgi?id=100634

        Reviewed by Kentaro Hara.

        * src/ColorChooserUIController.h:
        (ColorChooserUIController):
        Rename m_localizer to m_locale, and follow other renamings.
        * src/ColorChooserUIController.cpp:
        (WebKit::ColorChooserUIController::ColorChooserUIController): Follow renamings.
        (WebKit::ColorChooserUIController::locale): Ditto.
        * src/DateTimeChooserImpl.h:
        (DateTimeChooserImpl):
        Rename m_localizer to m_locale, and follow other renamings.
        * src/DateTimeChooserImpl.cpp:
        (WebKit::DateTimeChooserImpl::DateTimeChooserImpl): Follow renamings.
        (WebKit::DateTimeChooserImpl::writeDocument): Ditto.
        (WebKit::DateTimeChooserImpl::locale): Ditto.
        * tests/LocaleMacTest.cpp:
        (LocaleMacTest::formatTime): Ditto.
        (testNumberIsReversible): Ditto.
        * tests/LocalizedNumberICUTest.cpp:
        (testNumberIsReversible): Ditto.
        (testDecimalSeparator): Ditto.

2012-10-29  Kent Tamura  <tkent@chromium.org>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-10-28  Kent Tamura  <tkent@chromium.org>

        Rename Localizer.{cpp,h} to PlatformLocale.{cpp,h}
        https://bugs.webkit.org/show_bug.cgi?id=100627

        Reviewed by Yuta Kitamura.

        * src/ColorChooserUIController.h: Follow the file name renaming.
        * src/DateTimeChooserImpl.cpp: Ditto.

2012-10-27  Adam Barth  <abarth@webkit.org>

        [Chromium] Find-in-page reports matches in hidden iframes
        https://bugs.webkit.org/show_bug.cgi?id=100604

        Reviewed by Eric Seidel.

        This is actually a regression caused by
        http://trac.webkit.org/changeset/128784. This patch adds back some code
        removed in WebFrameImpl::shouldScopeMatches in r128784.
